--- a/src/main/resources/templates/joinForm.mustache
+++ b/src/main/resources/templates/joinForm.mustache
@@ -15,7 +15,7 @@
 <body>
     <div class="box-bg">
         <div class="container box-form d-flex align-items-center">
-            <form action="#" method="post">
+            <form action="#" method="post" onsubmit="return check()">
                 <div class="d-flex justify-content-center mb-3">
                     <p class="main-font">학원등록절차</p>
                 </div>
@@ -46,7 +46,7 @@
             </form>
         </div>
     </div>
-    <script src="/js/joinFrom.js"></script>c
+    <script src="/js/joinForm.js"></script>
 </body>
 
 </html>
