--- a/src/main/resources/static/css/battePage.css
+++ b/src/main/resources/static/css/battePage.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'nice';
-    src: url('font/HSGyeoulNoonkott2.0-Regular.ttf') format('truetype');
+    src: url('/font/HSGyeoulNoonkott2.0-Regular.ttf') format('truetype');
 }
 
 .full {
