--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -39,11 +39,21 @@
             margin-left: 30px;
         }
 
+        .box-header {
+            width: 100%;
+            height: 15%;
+        }
+
         .box-bg {
             background-image: url("/image/joinBG.png");
             background-size: 100%;
             background-position: center;
             height: 100vh;
+        }
+
+        .box-header-no-login {
+            width: 100%;
+            height: 100%;
         }
 
         .box-header-left {
@@ -60,10 +70,39 @@
             width: 40%;
             height: 100%;
         }
+
+        .ml-30 {
+            margin-left: 30px;
+        }
+
+        .box-body {
+            width: 100%;
+            height: 85%;
+        }
+
+        .box-img {
+            width: 100%;
+            height: 100%;
+        }
+
+        .box-body-half {
+            width: 100%;
+            height: 50%;
+        }
+
+        .img-a {
+            font-family: 'nice';
+            color: aliceblue;
+            font-size: 25px;
+            font-weight: 300;
+            text-decoration-line: none;
+        }
     </style>
 </head>
 <div class="box-bg">
-    <div class="p-4 bg-success d-flex justify-content-between">
+    <!-- 배너 시작 -->
+    <div class="p-4 bg-success box-header d-flex justify-content-between">
+        {{#user}}
         <div class="d-flex box-header-left">
             <div class="d-flex justify-content-center box-header-name header-font">
                 <p>나는진용</p>
@@ -76,6 +115,92 @@
         <div class="d-flex justify-content-end box-header-right">
             <button class="btn btn-info header-btn-font  header-btn">사람들과 대화하기</button>
             <button class="btn btn-info header-btn-font header-btn">질문게시판</button>
+        </div>
+        {{/user}}
+        {{^user}}
+        <div class="d-flex  justify-content-start box-header-no-login">
+            <div class="d-flex header-font ml-30">
+                <a href="/loginForm" class="btn header-font">로그인</a>
+            </div>
+            <div class="d-flex header-font ml-30">
+                <a href="/joinForm" class="btn header-font">회원가입</a>
+            </div>
+        </div>
+        {{/user}}
+    </div>
+    <!-- 배너 끝 -->
+    <div class="box-body">
+        <div class="box-body-half d-flex align-items-center">
+            <div class="d-flex justify-content-center ">
+                <div class="col-xl-1">
+                </div>
+                <div class="col-xl-2">
+                    <a href="/ready" class="img-a">
+                        <img class="box-img" src="/image/bgbg.png">
+                    </a>
+                    <a href="/ready" class="img-a">
+                        <p class="text-center">그린랜덤알피지</p>
+                    </a>
+                </div>
+                <div class="col-xl-1">
+                </div>
+                <div class="col-xl-2">
+                    <a href="/ready" class="img-a">
+                        <img class="box-img" src="/image/bgbg.png">
+                    </a>
+                    <a href="/ready" class="img-a">
+                        <p class="text-center">그린랜덤알피지</p>
+                    </a>
+                </div>
+                <div class="col-xl-1">
+                </div>
+                <div class="col-xl-2">
+                    <a href="/ready" class="img-a">
+                        <img class="box-img" src="/image/bgbg.png">
+                    </a>
+                    <a href="/ready" class="img-a">
+                        <p class="text-center">그린랜덤알피지</p>
+                    </a>
+                </div>
+                <div class="col-xl-1">
+                </div>
+            </div>
+        </div>
+        <div class="box-body-half d-flex align-items-center">
+            <div class="d-flex justify-content-center ">
+                <div class="col-xl-1">
+                </div>
+                <div class="col-xl-2">
+                    <a href="/ready" class="img-a">
+                        <img class="box-img" src="/image/bgbg.png">
+                    </a>
+                    <a href="/ready" class="img-a">
+                        <p class="text-center">그린랜덤알피지</p>
+                    </a>
+                </div>
+                <div class="col-xl-1">
+                </div>
+                <div class="col-xl-2">
+                    <a href="/ready" class="img-a">
+                        <img class="box-img" src="/image/bgbg.png">
+                    </a>
+                    <a href="/ready" class="img-a">
+                        <p class="text-center">그린랜덤알피지</p>
+                    </a>
+                </div>
+                <div class="col-xl-1">
+                </div>
+                <div class="col-xl-2">
+                    <a href="/ready" class="img-a">
+                        <img class="box-img" src="/image/bgbg.png">
+                    </a>
+                    <a href="/ready" class="img-a">
+                        <p class="text-center">그린랜덤알피지</p>
+                    </a>
+                </div>
+                <div class="col-xl-1">
+                </div>
+            </div>
         </div>
     </div>
 </div>
